--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "roam-message-sender",
-    "version": "1.0.3",
+    "version": "1.0.2",
     "description": "GitHub Action to send messages to Roam (ro.am)",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
+        "build": "ncc build index.js -o dist",
         "test": "jest",
         "lint": "eslint ."
     },
